--- a/s/stylesheet.css
+++ b/s/stylesheet.css
@@ -47,13 +47,24 @@ table {
 }
 
 /* LAYOUT STYLES */
+html {
+	min-height: 100%;
+	/*Defined at : http://www.colorzilla.com/gradient-editor/#eeeeee+0,cccccc+100;Gren+3D*/
+	background: rgb(238,238,238);
+	background: -moz-linear-gradient(top, rgba(238,238,238,1) 0%, rgba(204,204,204,1) 100%);
+	background: -webkit-linear-gradient(top, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%);
+	background: linear-gradient(to bottom, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 );
+}
+
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 1em;
   line-height: 1.5;
   color: #6d6d6d;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-  background: #e7e7e7 url(../images/body-bg.png) 0 0 repeat;
+  /*background: #e7e7e7 url(../i/body-bg.png) 0 0 repeat;*/
+
 }
 
 a {
@@ -86,7 +97,8 @@ header h2 {
 
 #container {
   min-height: 595px;
-  background: transparent url(../images/highlight-bg.jpg) 50% 0 no-repeat;
+  /*background: transparent url(../i/highlight-bg.jpg) 50% 0 no-repeat;*/
+	margin: 3rem;
 }
 
 .inner {
@@ -152,45 +164,6 @@ a.button span {
   padding-left: 50px;
 }
 
-#download-zip span {
-  background: transparent url(../images/zip-icon.png) 12px 50% no-repeat;
-}
-#download-tar-gz span {
-  background: transparent url(../images/tar-gz-icon.png) 12px 50% no-repeat;
-}
-#view-on-github span {
-  background: transparent url(../images/octocat-icon.png) 12px 50% no-repeat;
-}
-#view-on-github {
-  margin-right: 0;
-}
-
-code, pre {
-  margin-bottom: 30px;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal;
-  font-size: 14px;
-  color: #222;
-}
-
-code {
-  padding: 0 3px;
-  background-color: #f2f2f2;
-  border: solid 1px #ddd;
-}
-
-pre {
-  padding: 20px;
-  overflow: auto;
-  color: #f2f2f2;
-  text-shadow: none;
-  background: #303030;
-}
-pre code {
-  padding: 0;
-  color: #f2f2f2;
-  background-color: #303030;
-  border: none;
-}
 
 ul, ol, dl {
   margin-bottom: 20px;
@@ -204,7 +177,7 @@ hr {
   padding-bottom: 1em;
   margin-top: 1em;
   line-height: 1px;
-  background: transparent url('../images/hr.png') 50% 0 no-repeat;
+  background: transparent url('../i/hr.png') 50% 0 no-repeat;
   border: none;
 }
 
@@ -316,7 +289,7 @@ footer {
   margin-top: 40px;
   font-size: 13px;
   color: #aaa;
-  background: transparent url('../images/hr.png') 0 0 no-repeat;
+  background: transparent url('../i/hr.png') 0 0 no-repeat;
 }
 
 footer a {
@@ -371,3 +344,7 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) { }
+
+
+.applogo{border-radius:17.54%;}
+.grid-item{width:200px; margin-bottom: 10px;}
