--- a/s/stylesheet.css
+++ b/s/stylesheet.css
@@ -101,7 +101,6 @@ header h2 {
 
 #container {
   min-height: 595px;
-  /*background: transparent url(../i/highlight-bg.jpg) 50% 0 no-repeat;*/
 	margin: 3rem;
 }
 
@@ -111,7 +110,8 @@ header h2 {
 }
 
 #container .inner img {
-  max-width: 100%;
+  /*max-width: 100%;*/
+	/*max-width: 30%;*/
 }
 
 #downloads {
@@ -129,33 +129,18 @@ a.button {
   line-height: 25px;
   color: #303030;
   background: #fdfdfd; /* Old browsers */
-  background: -moz-linear-gradient(top,  #fdfdfd 0%, #f2f2f2 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fdfdfd), color-stop(100%,#f2f2f2)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #fdfdfd 0%,#f2f2f2 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #fdfdfd 0%,#f2f2f2 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #fdfdfd 0%,#f2f2f2 100%); /* IE10+ */
   background: linear-gradient(top,  #fdfdfd 0%,#f2f2f2 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
   border-top: solid 1px #cbcbcb;
   border-right: solid 1px #b7b7b7;
   border-bottom: solid 1px #b3b3b3;
   border-left: solid 1px #b7b7b7;
   border-radius: 30px;
-  -webkit-box-shadow: 10px 10px 5px #888;
-  -moz-box-shadow: 10px 10px 5px #888;
-  box-shadow: 0px 1px 5px #e8e8e8;
-  -moz-border-radius: 30px;
-  -webkit-border-radius: 30px;
+  box-shadow: 0 1px 5px #e8e8e8;
 }
+
 a.button:hover {
   background: #fafafa; /* Old browsers */
-  background: -moz-linear-gradient(top,  #fdfdfd 0%, #f6f6f6 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fdfdfd), color-stop(100%,#f6f6f6)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #fdfdfd 0%,#f6f6f6 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #fdfdfd 0%,#f6f6f6 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #fdfdfd 0%,#f6f6f6 100%); /* IE10+ */
   background: linear-gradient(top,  #fdfdfd 0%,#f6f6f6, 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', endColorstr='#f6f6f6',GradientType=0 ); /* IE6-9 */
   border-top: solid 1px #b7b7b7;
   border-right: solid 1px #b3b3b3;
   border-bottom: solid 1px #b3b3b3;
@@ -168,11 +153,9 @@ a.button span {
   padding-left: 50px;
 }
 
-
 ul, ol, dl {
   margin-bottom: 20px;
 }
-
 
 /* COMMON STYLES */
 
@@ -232,7 +215,8 @@ h3 {
   margin-bottom: 8px;
   font-size: 18px;
   font-weight: bold;
-  color: #d5000d;
+  color: #303030;
+  /*color: #d5000d;*/
 }
 
 h4 {
@@ -355,7 +339,6 @@ footer a:hover {
 
 h1.four {
   font-size: 20vh;
-  font-family: sans-serif;
   position: relative;
   background: white;
   color: black;
@@ -394,4 +377,29 @@ h1.four:before {
 
 .thedot{
 	color:red;
+}
+.contact{
+	width: 2rem;
+	height: 1rem;
+}
+
+.flexy {
+	display: flex;
+	flex-flow: wrap;
+	text-align: inherit;
+}
+
+.fleft, .fright, .fheader{
+	flex: 1 auto;
+}
+
+.aflex{
+	display: flex;
+	flex-flow:wrap;
+	justify-content: center;
+
+}
+.app img{
+	width: 6rem;
+	padding: 1rem;
 }
