--- a/s/stylesheet.css
+++ b/s/stylesheet.css
@@ -164,7 +164,7 @@ hr {
   padding-bottom: 1em;
   margin-top: 1em;
   line-height: 1px;
-  background: transparent url('../i/hr.png') 50% 0 no-repeat;
+  background: transparent url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAp0AAAABCAQAAAA2592kAAAASUlEQVR4Aa2SMQ4AIAwCy/8fjYO75jzdOFCblEzmdOIpJ5tpLVySFUkxkdKegK3fOfD75Fck/5CifPlr/Cb607tes32WN4S1bQG4FyUDSe/XhgAAAABJRU5ErkJggg==) 50% 0 no-repeat;
   border: none;
 }
 
@@ -277,7 +277,7 @@ footer {
   margin-top: 40px;
   font-size: 13px;
   color: #aaa;
-  background: transparent url('../i/hr.png') 0 0 no-repeat;
+  background: transparent url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAp0AAAABCAQAAAA2592kAAAASUlEQVR4Aa2SMQ4AIAwCy/8fjYO75jzdOFCblEzmdOIpJ5tpLVySFUkxkdKegK3fOfD75Fck/5CifPlr/Cb607tes32WN4S1bQG4FyUDSe/XhgAAAABJRU5ErkJggg==) 0 0 no-repeat;
 }
 
 footer a {
