--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link href='//fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Chivo:900&text=AgentC.io' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="/s/stylesheet.css" media="screen">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
