--- a/s/stylesheet.css
+++ b/s/stylesheet.css
@@ -1,7 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -22,7 +18,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 	border: 0;
 }
-/* HTML5 display-role reset for older browsers */
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -46,7 +42,6 @@ table {
 	border-collapse: collapse;
 }
 
-/* LAYOUT STYLES */
 html {
 	min-height: 100%;
 	/*Defined at : http://www.colorzilla.com/gradient-editor/#eeeeee+0,cccccc+100;Gren+3D*/
@@ -84,7 +79,7 @@ header {
 }
 
 header h1, h1.four {
-  font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Chivo', Helvetica, Arial, serif;
   font-size: 48px; font-weight: 900;
   line-height: 1.2;
   color: #303030;
@@ -110,14 +105,12 @@ header h2 {
 }
 
 #container .inner img {
-  /*max-width: 100%;*/
-	/*max-width: 30%;*/
 }
 
 #downloads {
   margin-bottom: 40px;
 }
-
+/*
 a.button {
   display: block;
   float: left;
@@ -128,19 +121,19 @@ a.button {
   font-weight: bold;
   line-height: 25px;
   color: #303030;
-  background: #fdfdfd; /* Old browsers */
-  background: linear-gradient(top,  #fdfdfd 0%,#f2f2f2 100%); /* W3C */
+  background: #fdfdfd;
+  background: linear-gradient(top,  #fdfdfd 0%,#f2f2f2 100%);
   border-top: solid 1px #cbcbcb;
   border-right: solid 1px #b7b7b7;
   border-bottom: solid 1px #b3b3b3;
   border-left: solid 1px #b7b7b7;
   border-radius: 30px;
   box-shadow: 0 1px 5px #e8e8e8;
-}
-
+}*/
+/*
 a.button:hover {
-  background: #fafafa; /* Old browsers */
-  background: linear-gradient(top,  #fdfdfd 0%,#f6f6f6, 100%); /* W3C */
+  background: #fafafa;
+  background: linear-gradient(top,  #fdfdfd 0%,#f6f6f6, 100%);
   border-top: solid 1px #b7b7b7;
   border-right: solid 1px #b3b3b3;
   border-bottom: solid 1px #b3b3b3;
@@ -151,13 +144,11 @@ a.button span {
   display: block;
   height: 23px;
   padding-left: 50px;
-}
+}*/
 
 ul, ol, dl {
   margin-bottom: 20px;
 }
-
-/* COMMON STYLES */
 
 hr {
   height: 1px;
@@ -196,9 +187,6 @@ form {
   background: #f2f2f2;
 
 }
-
-
-/* GENERAL ELEMENT TYPE STYLES */
 
 h1 {
   font-size: 32px;
@@ -300,26 +288,17 @@ footer a:hover {
 * html .clearfix {height: 1%;}
 .clearfix {display: block;}
 
-/* #Media Queries
-================================================== */
 
-/* Smaller than standard 960 (devices and browsers) */
 @media only screen and (max-width: 959px) { }
 
-/* Tablet Portrait size to standard 960 (devices and browsers) */
+
 @media only screen and (min-width: 768px) and (max-width: 959px) { }
 
-/* All Mobile Sizes (devices and browser) */
+
 @media only screen and (max-width: 767px) {
   header {
     padding-top: 10px;
     padding-bottom: 10px;
-  }
-  #downloads {
-    margin-bottom: 25px;
-  }
-  #download-zip, #download-tar-gz {
-    display: none;
   }
   .inner {
     width: 94%;
@@ -327,12 +306,11 @@ footer a:hover {
   }
 }
 
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+
 @media only screen and (min-width: 480px) and (max-width: 767px) { }
 
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-@media only screen and (max-width: 479px) { }
 
+@media only screen and (max-width: 479px) { }
 
 .applogo{border-radius:17.54%;}
 .grid-item{width:200px; margin-bottom: 10px;}
@@ -375,10 +353,10 @@ h1.four:before {
   }
 }
 
-.thedot{
+.thedot {
 	color:red;
 }
-.contact{
+.contact {
 	width: 2rem;
 	height: 1rem;
 }
@@ -390,21 +368,28 @@ h1.four:before {
 	justify-content: space-around;
 }
 
-.fleft, .fright{
+.fleft, .fright {
 	flex: 1 auto;
 }
 
-.fheader{
+.fheader {
 	flex: 1 40rem;
 }
 
-.aflex{
+.aflex {
 	display: flex;
 	flex-flow:wrap;
 	justify-content: center;
 
 }
-.app img{
+.app img {
 	width: 6rem;
-	padding: 1rem;
+	margin: 1rem;
+	transition: all 0.5s ease;
+}
+
+.app img:hover {
+  transform:scale(1.25);
+	border-radius:2%;
+	box-shadow: 10px 10px 38px 5px #000000;;
 }
