Tweaks to logotype.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <div id="container">
       <div class="inner">
         <header>
-          <a href="/"><h1>AgentC<span class="thedot">.</span>io</h1></a>
+          <a href="/"><h1>AgentC<span class="thedot">.</span><span class="io">io</span></h1></a>
         </header>
         <hr>
 
