--- a/s/stylesheet.css
+++ b/s/stylesheet.css
@@ -393,3 +393,13 @@ h1.four:before {
 	border-radius:2%;
 	box-shadow: 10px 10px 38px 5px #000000;;
 }
+.io {
+	top: 27px;
+	z-index: -1;
+	left: -13px;
+	position: relative;;
+}
+
+header{
+	position: relative;
+}
