--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,9 @@
   <meta content="text/html; charset=UTF-8; X-Content-Type-Options=nosniff" http-equiv="Content-Type" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:url" content="http://www.agentc.io/"/>
+  <meta property="og:url" content="//www.agentc.io/"/>
   <meta property="og:site_name" content="AgentC"/>
-  <meta property="og:image" content="http://www.agentc.io/apple-touch-icon.png"/>
+  <meta property="og:image" content="//www.agentc.io/apple-touch-icon.png"/>
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
