--- a/_layouts/fourohfour.html
+++ b/_layouts/fourohfour.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" class="four">
+<html lang="en-US">
   {% include head.html %}
   <body>
     <div id="container">
