--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,14 @@
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48779663-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-48779663-1');
+  </script>
+
+
   <meta name="referrer" content="no-referrer">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
   <meta property="og:url" content="//www.agentc.io/"/>
