--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,10 @@
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <link href='//fonts.googleapis.com/css?family=Chivo:900&text=AgentC.io' rel='stylesheet'>
-  {% comment %}<link rel="stylesheet" href="/s/stylesheet.css">{% endcomment %}
+   {% comment %}
+  <!--<link href='//fonts.googleapis.com/css?family=Chivo:900&text=AgentC.io' rel='stylesheet'>  -->
+  <!-- <link rel="stylesheet" href="/s/stylesheet.css"> -->  
+  {% endcomment %}
   <style>
     html {
       line-height: 1.15;
@@ -31,7 +33,7 @@
       box-sizing: border-box;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
-      font-family: -apple-system, BlinkMacSystemFont, "Roboto Condensed", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
       font-weight: 400;
       font-size: 1em;
       margin: 0;
@@ -42,7 +44,15 @@
       text-decoration: none;
       color: #c5000c;
     }
-
+    /* chivo-900 - latin */
+    @font-face {
+      font-family: 'Chivo';
+      font-style: normal;
+      font-weight: 900;
+      src: local('Chivo Black'), local('Chivo-Black'),
+           url('/f/chivo-v10-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+           url('/f/chivo-v10-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    }
     header h1, h1.four {
       font-family: 'Chivo';
       font-size: 48px;
