--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
   </h3>
   <div class="fleft">
     <a href="mailto:inquiry@agentc.io">
-      <svg 
+      <svg
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
         width="512"
@@ -19,10 +19,12 @@
           <path
             class="env"
                 d="M44.8 0h422.4C489.6 0 512 22.4 512 44.8v294.4c0 22.4-22.4 44.8-44.8 44.8H44.8C22.4 384 0 361.6 0 339.2V44.8C0 22.4 22.4 0 44.8 0zM51.2 307.2c0 16.8 8.8 25.6 25.6 25.6h358.4c16.8 0 25.6-8.8 25.6-25.6V76.8L290 251.6c-15.8 15.8-41.5 15.8-57.3 0L51.2 76.8V307.2zM89.6 51.2l150.2 150.3c11.9 11.9 31.1 11.9 43 0L435.2 51.2H89.6z" />
-      </svg>  
+      </svg>
       inquiry@agentc.io
     </a>
   </div>
+
+  {% comment %}
   <div class="fright">
     <a href="tel:415.937.1277">
       <svg
@@ -31,7 +33,7 @@
          version="1.1"
          viewbox="0 0 20.9 8.4"
          height="31.8"
-         width="79.15" 
+         width="79.15"
          class="contact">
          <style type="text/css">
            #phone{fill:#000000;}
@@ -45,8 +47,7 @@
         </g>
       </svg>
 
-      
-      
       415.937.1277</a>
   </div>
+  {% endcomment %}
 </section>
